# slackup

./: .gitignore  README.md  slackup.cabal
app/: Main.hs
src/: Slackup.hs
src/Slackup/: Interrogative.hs
test/Slackup/: InterrogativeSpec.hs
