name:                slackup
version:             0.1.0.0
homepage:            https://github.com/Jared-Prime/slackup#readme
author:              Jared Davis
maintainer:          jared@haiq.us
copyright:           MIT License
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slackup.Interrogative
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable slackup-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slackup
  default-language:    Haskell2010

test-suite slackup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slackup
                     , hspec
                     , hspec-discover
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010